tests/nala/error/array-len.nl

const num = 7;
const length = len(num);
print(length);